--- a/package.json
+++ b/package.json
@@ -1,47 +1,59 @@
 {
-  "name": "fluent-ui-dimension-panel",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@frndfrts/fluent-ui-custom-components",
+  "version": "1.0.0",
+  "description": "Custom Fluent UI component library with 5-level architecture",
+  "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
+  "peerDependencies": {
+    "@fluentui/react-components": "^9.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
   "dependencies": {
     "@ctrl/tinycolor": "^3.6.1",
-    "@fluentui/react-components": "^9.68.3",
+    "@fluentui/react-button": "^9.6.5",
+    "@fluentui/react-color-picker": "^9.2.4",
+    "@fluentui/react-components": "^9.0.0",
     "@fluentui/react-icons": "^2.0.0",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.0",
-    "web-vitals": "^2.1.0"
+    "@fluentui/react-input": "^9.7.4",
+    "@fluentui/react-select": "^9.4.4",
+    "@fluentui/react-swatch-picker": "^9.4.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage --watchAll=false",
-    "eject": "react-scripts eject",
+    "dev": "storybook dev -p 6006",
+    "build": "rollup -c",
+    "build:types": "tsc --emitDeclarationOnly --outDir dist/types",
+    "build:all": "npm run build:types && npm run build",
+    "test": "jest",
+    "test:coverage": "jest --coverage --watchAll=false",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "clean": "rimraf dist",
+    "prepublishOnly": "npm run build:all",
+    "test:publish": "node scripts/test-publish.js"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
     "@storybook/addon-links": "^8.6.14",
@@ -53,9 +65,32 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^24.1.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^27.5.1",
+    "rimraf": "^5.0.0",
+    "rollup": "^4.0.0",
+    "rollup-plugin-dts": "^6.0.0",
     "ts-jest": "^27.1.5",
-    "ts-loader": "^9.5.2"
+    "ts-loader": "^9.5.2",
+    "typescript": "^4.9.0"
+  },
+  "sideEffects": false,
+  "keywords": [
+    "react",
+    "fluent-ui",
+    "components",
+    "typescript",
+    "ui-library"
+  ],
+  "author": "Fluent UI Custom Components Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "github:frndfrts/fluent-ui-custom-components"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
