--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
 
       - name: Build package
-        run: npm run build
+        run: npm run build:ci
 
       - name: Publish to GitHub Packages
         run: npm publish
