--- a/package.json
+++ b/package.json
@@ -54,11 +54,10 @@
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/addon-links": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/react-webpack5": "^8.6.14",
+    "@storybook/addon-docs": "9.1.3",
+    "@storybook/addon-links": "^9.1.3",
+    "@storybook/builder-webpack5": "^9.1.3",
+    "@storybook/react-webpack5": "^9.1.3",
     "@storybook/testing-library": "^0.2.1",
     "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
@@ -72,6 +71,7 @@
     "rimraf": "^5.0.0",
     "rollup": "^4.0.0",
     "rollup-plugin-dts": "^6.0.0",
+    "storybook": "^9.1.3",
     "ts-jest": "^27.1.5",
     "ts-loader": "^9.5.2",
     "typescript": "^4.9.0"
